# ahtrading-erp-pos

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini
.claude/: launch.json
apps/: README.md
apps/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-desktop/src-tauri/capabilities/: default.json
apps/admin-desktop/src-tauri/src/: main.rs
apps/pos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos-desktop/src-tauri/capabilities/: default.json
apps/pos-desktop/src-tauri/src/: main.rs
backend/: Dockerfile  README.md  __init__.py  requirements-dev.txt  requirements.txt
deploy/: docker-compose.dokploy.yml  docker-compose.edge.yml
docs/: Chart of Accounts.xls  README.md  admin-ui-ux-audit.md  ai-agents.md  architecture.md  data-model.md  offline-sync.md  pos-printing.md  requirements.md  roadmap.md  system-blueprint.md  system-map.md  tech-stack.md  workspace-guide.md
pos/: sqlite_schema.sql
pos-desktop/: README.md  agent.py  config.official.sample.json  config.sample.json  config.unofficial.sample.json
scripts/: audit_erpnext_import_cloud.py  audit_erpnext_sales_invoice_pos_replay.py  audit_routes.py  build_pos_masterdata_from_item_csv.py  build_pos_parties_from_erpnext_csv.py  build_setup_runner_pack.py  check_active_catalog_price_safety.py  cleanup_orphan_gl_journals.py  enforce_erpnext_company_alignment_cloud.py  export_erpnext_pos_import_csv.py  export_erpnext_pos_masterdata.py  financial_integrity_check.py  fix_erpnext_uom_conversions_from_invoice_audit.py  import_erpnext_ah_trading_via_api.py  import_item_images_from_erpnext_csv.py  import_opening_stock_from_erpnext_bins.py  import_pos_items_prices_via_api.py  import_pos_masterdata_via_api.py  mac_fix_dmg_gatekeeper.sh  onboard_onprem_pos.py  onboard_onprem_pos.sh  preflight.sh  publish_desktop_release.py  rebase_pos_masterdata_uom.py  setup_installer.py  setup_installer.sh  setup_macos_notarization_secrets.sh  setup_price_lists_wholesale_retail.py  sync_erpnext_prices_costs_to_cloud.py
web-admin/: app.js  index.html  styles.css  (+3 more)
(+774 files in other folders)
