[package]
name = "ahtrading-admin-desktop"
version = "0.0.1"
description = "AH Trading Admin Desktop (Tauri)"
authors = ["AH Trading"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

