[package]
name = "melqard-portal-desktop"
version = "0.0.5"
description = "Melqard Portal Desktop (Tauri)"
authors = ["Melqard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
base64 = "0.22"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
